<resources>
    <string name="app_name">Android Background Service</string>

    <string name="work_manager_status">Work Manager Status :</string>
    <string name="colon">:</string>

    <string name="button_start">START</string>
    <string name="button_stop">STOP</string>
    <string name="button_alarm_manager">Alarm Manager</string>
    <string name="button_set_alarm_time">Set Alarm Time</string>

    <string name="dialog_message">Stop Background Process?</string>
    <string name="dialog_push_notification_denied">Notification did not appear if permisssion denied</string>

    <string name="push_notification_background_service_title">Background Service</string>
    <string name="push_notification_background_service_text">This is notification from background service</string>
    <string name="push_notification_alarm_manager">This is Notification from Alarm Manager</string>

    <!-- Auto-start / battery reminder cards -->
    <string name="settings">Settings</string>
    <string name="enable_auto_start_permission">Enable auto start permission so alarms can fire in background</string>
    <string name="disable_battery_optimization">Disable battery optimization to prevent the alarm being deferred in Doze</string>
</resources>