<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSetAlarmTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/button_margin"
            android:paddingVertical="@dimen/button_padding_vertical"
            android:text="@string/button_set_alarm_time"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAlarmTimeHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_alarm_size"
                android:textStyle="bold"
                tools:text="21" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:textSize="@dimen/text_alarm_size"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAlarmTimeMinute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_alarm_size"
                android:textStyle="bold"
                tools:text="45" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutReminders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardAutoStartPermission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/button_margin"
                android:layout_marginBottom="@dimen/reminder_card_margin_vertical"
                android:visibility="gone"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/reminder_card_corner_radius"
                app:cardElevation="@dimen/reminder_card_elevation"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/reminder_card_padding_horizontal"
                    android:paddingVertical="@dimen/reminder_card_padding_vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/enable_auto_start_permission"
                        android:textSize="@dimen/reminder_text_size" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnAutoStartSettings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/reminder_card_padding_horizontal"
                        android:minWidth="0dp"
                        android:paddingHorizontal="@dimen/reminder_button_padding_horizontal"
                        android:text="@string/settings"
                        android:textSize="@dimen/reminder_button_text_size"
                        app:cornerRadius="@dimen/reminder_button_corner_radius" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardBatteryOptimization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:visibility="gone"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/reminder_card_corner_radius"
                app:cardElevation="@dimen/reminder_card_elevation"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/reminder_card_padding_horizontal"
                    android:paddingVertical="@dimen/reminder_card_padding_vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/disable_battery_optimization"
                        android:textSize="@dimen/reminder_text_size" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnBatterySettings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/reminder_card_padding_horizontal"
                        android:minWidth="0dp"
                        android:paddingHorizontal="@dimen/reminder_button_padding_horizontal"
                        android:text="@string/settings"
                        android:textSize="@dimen/reminder_button_text_size"
                        app:cornerRadius="@dimen/reminder_button_corner_radius" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>